--- a/src/app/views/books/_form.html.erb
+++ b/src/app/views/books/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: book, local: true) do |form| %>
-  <% if book.errors.any? %>
+<%= form_for([@author,@book]) do |form| %>
+  <% if @book.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(book.errors.count, "error") %> prohibited this book from being saved:</h2>
+      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
 
       <ul>
-      <% book.errors.full_messages.each do |message| %>
+      <% @book.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
@@ -14,16 +14,6 @@
   <div class="field">
     <%= form.label :title %>
     <%= form.text_field :title, id: :book_title %>
-  </div>
-
-  <div class="field">
-    <%= form.label :author %>
-    <%= form.text_field :author, id: :book_author %>
-  </div>
-
-  <div class="field">
-    <%= form.label :author_id %>
-    <%= form.number_field :author_id, id: :book_author_id %>
   </div>
 
   <div class="actions">
