--- a/src/app/views/books/edit.html.erb
+++ b/src/app/views/books/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', book: @book %>
 
 <%= link_to 'Show', @book %> |
-<%= link_to 'Back', books_path %>
+<%= link_to 'Back', author_books_path %>
