--- a/src/app/views/books/index.html.erb
+++ b/src/app/views/books/index.html.erb
@@ -7,8 +7,7 @@
     <tr>
       <th>Title</th>
       <th>Author</th>
-      <th>Author</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -16,11 +15,8 @@
     <% @books.each do |book| %>
       <tr>
         <td><%= book.title %></td>
-        <td><%= book.author %></td>
-        <td><%= book.author_id %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= book.author.name %></td>
+        <td><%= link_to 'Show', author_book_path(book.author.id, book.id) %></td> -->
       </tr>
     <% end %>
   </tbody>
@@ -28,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Book', new_book_path %>
+<%= link_to 'New Book', new_author_book_path %>
