--- a/src/app/views/books/new.html.erb
+++ b/src/app/views/books/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Book</h1>
 
-<%= render 'form', book: @book %>
+<%= render 'form' %>
 
-<%= link_to 'Back', books_path %>
+<%= link_to 'Back', author_books_path %>
