--- a/src/app/views/books/show.html.erb
+++ b/src/app/views/books/show.html.erb
@@ -7,13 +7,5 @@
 
 <p>
   <strong>Author:</strong>
-  <%= @book.author %>
+  <%= @book.author.name %>
 </p>
-
-<p>
-  <strong>Author:</strong>
-  <%= @book.author_id %>
-</p>
-
-<%= link_to 'Edit', edit_book_path(@book) %> |
-<%= link_to 'Back', books_path %>
