added image upload functionality

--- a/src/app/views/books/show.html.erb
+++ b/src/app/views/books/show.html.erb
@@ -5,6 +5,13 @@
   <%= @book.title %>
 </p>
 
+
+<p>
+  <strong>Cover</strong>
+  <%= image_tag(@book.image) %>
+</p>
+
+
 <p>
   <strong>Author:</strong>
   <%= @book.author.name %>
