modified books & publications table

--- a/src/app/views/books/_form.html.erb
+++ b/src/app/views/books/_form.html.erb
@@ -12,34 +12,31 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :title %>
+    <%= form.label "Book Title" %>
     <%= form.text_field :title, id: :book_title, required: true %>
   </div>
 
   <div class="field">
-    <%= form.label :image %>
+    <%= form.label "Please Upload Your Book Cover" %>
     <%= form.file_field :image, required: true %>
   </div>
 
   <div class="field">
   <%= form.fields_for :publisher, @book.build_publisher do |pub_attr| %>
-    <%= pub_attr.label :name  %>
+    <%= pub_attr.label "Publishing Company Name"  %>
     <%= pub_attr.text_field :name, required: true %>
     <br />
-    <%= pub_attr.label :city  %>
+    <%= pub_attr.label "Publishing Company Location" %>
     <%= pub_attr.text_field :city, required: true %>
+    <br />
+    <%= pub_attr.label "Year of Publication"  %>
+    <%= pub_attr.text_field :year, required: true %>
+    <br />
+    <%= pub_attr.label "Publication Medium:"  %>
+    <%= pub_attr.text_field :format, required: true %>
   <% end %>
   </div>
 
-  <div class="field">
-    <%= form.label :format %>
-    <%= form.text_field :format, required: true %>
-  </div>
-
-  <div class="field">
-    <%= form.label :year_published %>
-    <%= form.text_field :year_published, required: true %>
-  </div>
 
   <div class="actions">
     <%= form.submit %>
