--- a/src/app/assets/stylesheets/welcome.scss
+++ b/src/app/assets/stylesheets/welcome.scss
@@ -1,3 +1,19 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.jumbotron {
+   height: 100vh;
+ }
+
+ /* Adds background image */
+ .welcome {
+   background: url('bookshop.jpg') no-repeat center center;
+   background-size: cover;
+ }
+
+ /* Centers login & sign in buttons */
+ .enter {
+   text-align: center;
+ }
