--- a/src/app/views/welcome/index.erb
+++ b/src/app/views/welcome/index.erb
@@ -1,4 +1,10 @@
-<h1>Welcome to the bookshelf</h1>
+<div class="jumbotron welcome">
 
-<%= link_to "Log In", login_path %> || <%= link_to "Sign Up", new_author_registration_path %> <br/>
-<%# link_to "Log Out", logout_path  %>
+  <h1 style="text-align:center; color: #fff; text-shadow: 1px 1px #000;"> Welcome to the Shelf </h1>
+  <h3 style="text-align:center; color: #fff; text-shadow: 1px 1px #000;"> Find Your Perfect Project Partner Today!</h3>
+  <br/>
+    <div class="container enter">
+      <%= link_to 'Login', login_path, :class => "btn btn-primary btn-lg" %>
+      <%= link_to 'Signup', register_path, :class => "btn btn-primary btn-lg" %>
+   </div>
+</div>
