--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -11,23 +11,20 @@
   <body>
     <% if current_author %>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #71da71;">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">The Shelf</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <%# link_to 'My Profile', author_path(current_author), :class => "nav-link" %>
+            <%# link_to 'My Profile', author_books_path, :class => "nav-link" %>
           </li>
           <li class="nav-item">
             <%# link_to 'Add Book', new_author_book_path, :class => "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to 'Logout', logout_path, :class => "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
           </li>
         </ul>
       </div>
