added styling to author page

--- a/src/app/assets/stylesheets/custom/custom.scss
+++ b/src/app/assets/stylesheets/custom/custom.scss
@@ -85,3 +85,13 @@
  .text-muted {
    line-height: 1.5em;
  }
+
+ /* STYLES FOR NEW BOOK PAGE */
+
+.add-book {
+  text-align: center;
+}
+
+.form-back {
+  text-align: center;
+}
