--- a/src/app/views/books/new.html.erb
+++ b/src/app/views/books/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Book</h1>
+<h1 class="jumbotron-heading add-book pt-4">Add A New Book</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', author_books_path %>
