--- a/src/app/views/devise/registrations/new.html.erb
+++ b/src/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
         <%= f.label :first_name %><br />
         <%= f.text_field :first_name, autofocus: true, class: "form-control" %>
       </div>
-      
+
       <div class="field">
         <%= f.label :middle_name %><br />
         <%= f.text_field :middle_name, autofocus: true, class: "form-control" %>
@@ -39,7 +39,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Sign up", class: "btn btn-lg btn-primary btn-block" %>
+        <%= f.submit "Register", class: "btn btn-lg btn-primary btn-block" %>
       </div>
     <% end %>
     <%= render "devise/shared/links" %>
