--- a/src/app/views/authors/show.html.erb
+++ b/src/app/views/authors/show.html.erb
@@ -25,7 +25,7 @@
               <p class="card-text"> <%= book.get_citation %> </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                  <%= link_to 'View', author_book_path([@author, @book]), :class => "btn btn-sm btn-outline-secondary" %>
                 </div>
               </div>
             </div>
