--- a/src/app/views/books/show.html.erb
+++ b/src/app/views/books/show.html.erb
@@ -1,21 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @book.title %>
-</p>
-
-<p>
-  <strong>Cover</strong>
-  <%= image_tag(@book.image) %>
-</p>
-
-<p>
-  <strong>Author:</strong>
-  <%= @book.author.full_name %>
-</p>
-
-<p>
-  <strong>Citation MLA Format:</strong>
-  <%= @book.get_citation %>
-</p>
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-6">
+     <p> <%= image_tag(@book.image) %> </p>
+    </div>
+    <div class="col-6">
+      <h1 class="jumbotron-heading">
+        <%= @book.title %>
+      </h1>
+      <p> by <strong><%= @book.author.full_name %></strong> </p>
+      <div class="alert alert-secondary mt-4" role="alert">
+        <h4 class="alert-heading"> MLA Citation </h4>
+          <h6><%= @book.get_citation %></h6>
+      </div>
+      <%= link_to 'Home', author_path(@book.author), :class => "btn btn-md btn-outline-secondary" %>
+    </div>
+  </div>
+</div>
