--- a/src/app/views/authors/show.html.erb
+++ b/src/app/views/authors/show.html.erb
@@ -1,6 +1,4 @@
 
-  <p id="notice"><%= notice %></p>
-
   <section class="jumbotron text-center">
     <div class="container">
       <h1 class="jumbotron-heading">
@@ -8,7 +6,7 @@
       </h1>
       <p class="lead text-muted"> Take a moment to check out your library, add a book, <br/> or get a MLA snippet if you need to reference your work! </p>
       <p>
-        <%= link_to 'Create A New Book', new_author_book_path([@author, @book]), :class => "btn btn-primary my-2" %>
+        <%= link_to 'Create A New Book', new_author_book_path(@author, @book), :class => "btn btn-primary my-2" %>
       </p>
     </div>
   </section>
@@ -25,7 +23,7 @@
               <p class="card-text"> <%= book.get_citation %> </p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <%= link_to 'View', author_book_path([@author, @book]), :class => "btn btn-sm btn-outline-secondary" %>
+                  <%= link_to 'View', author_book_url(@author, book), :class => "btn btn-sm btn-outline-secondary" %>
                 </div>
               </div>
             </div>
