--- a/src/app/views/books/show.html.erb
+++ b/src/app/views/books/show.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
   <div class="row mt-5">
     <div class="col-6">
-     <p> <%= image_tag(@book.image) %> </p>
+     <p> <%= image_tag @book.image, class: "book-image" %> </p>
     </div>
     <div class="col-6">
       <h1 class="jumbotron-heading">
