--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <%# link_to 'My Profile', author_books_path, :class => "nav-link" %>
+            <%= link_to 'My Profile', author_path(current_author), :class => "nav-link" %>
           </li>
           <li class="nav-item">
             <%# link_to 'Add Book', new_author_book_path, :class => "nav-link" %>
