--- a/src/app/views/welcome/index.erb
+++ b/src/app/views/welcome/index.erb
@@ -1,10 +1,8 @@
 <div class="jumbotron welcome">
-
-  <h1 style="text-align:center; color: #fff; text-shadow: 1px 1px #000;"> Welcome to the Shelf </h1>
-  <h3 style="text-align:center; color: #fff; text-shadow: 1px 1px #000;"> Find Your Perfect Project Partner Today!</h3>
-  <br/>
-    <div class="container enter">
-      <%= link_to 'Login', login_path, :class => "btn btn-primary btn-lg" %>
-      <%= link_to 'Signup', register_path, :class => "btn btn-primary btn-lg" %>
-   </div>
+  <div class="greeting">
+    <h1 class="jumbotron-heading"> Welcome to the Shelf </h1>
+    <h4> Keep track of your published books!</h4>
+    <%= link_to 'Login', login_path, :class => "btn btn-primary btn-lg" %>
+    <%= link_to 'Signup', register_path, :class => "btn btn-primary btn-lg" %>
+  </div>
 </div>
