cleaned up unused code

--- a/src/app/assets/stylesheets/welcome.scss
+++ b/src/app/assets/stylesheets/welcome.scss
@@ -13,7 +13,7 @@
 
  /* Adds background image */
  .welcome {
-   background: url('bookshop.jpg') no-repeat center center;
+   background: url('shelf.jpg') no-repeat center center;
    background-size: cover;
    display: flex;
    justify-content: center;
