--- a/src/app/assets/stylesheets/registration.scss
+++ b/src/app/assets/stylesheets/registration.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the registration controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.main {
+  background: url('stack.jpg') no-repeat center center;
+  background-size: cover;
+}
+
+.row {
+  min-height: 100vh;
+}
