--- a/src/app/views/books/show.html.erb
+++ b/src/app/views/books/show.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 
 <div class="container">
   <div class="row mt-5">
@@ -14,6 +13,7 @@
         <h4 class="alert-heading"> MLA Citation </h4>
           <h6><%= @book.get_citation %></h6>
       </div>
+      <%# button_to 'Copy Citation to Clipboard',  onclick: "copyCite()", remote: true, id: "copy-text"%>
       <%= link_to 'Home', author_path(@book.author), :class => "btn btn-md btn-outline-secondary" %>
     </div>
   </div>
