--- a/src/app/views/devise/registrations/new.html.erb
+++ b/src/app/views/devise/registrations/new.html.erb
@@ -1,47 +1,55 @@
 
-<div class="container mt-4">
-  <h2>Register</h2>
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form-signin") do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
+<div class="container-fluid h-100">
+  <div class="row">
+    <div class="col-md-6 main">
+    </div>
+    <div class="col-md-6">
+    <div class="h-md-75 p-5 justify-content-center">
+    <h2>Register</h2>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), class: "form-signin") do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
 
-      <div class="field">
-        <%= f.label :first_name %><br />
-        <%= f.text_field :first_name, autofocus: true, class: "form-control" %>
+        <div class="field">
+          <%= f.label :first_name %><br />
+          <%= f.text_field :first_name, autofocus: true, class: "form-control" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :middle_name %><br />
+          <%= f.text_field :middle_name, autofocus: true, class: "form-control" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :last_name %><br />
+          <%= f.text_field :last_name, autofocus: true, class: "form-control" %>
+        </div>
+
+
+        <div class="field">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+        </div>
+
+        <div class="field">
+          <%= f.label :password_confirmation %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "Register", class: "btn btn-lg btn-primary btn-block" %>
+        </div>
+
+      <% end %>
+      <%= render "devise/shared/links" %>
       </div>
-
-      <div class="field">
-        <%= f.label :middle_name %><br />
-        <%= f.text_field :middle_name, autofocus: true, class: "form-control" %>
-      </div>
-
-      <div class="field">
-        <%= f.label :last_name %><br />
-        <%= f.text_field :last_name, autofocus: true, class: "form-control" %>
-      </div>
-
-
-      <div class="field">
-        <%= f.label :email %><br />
-        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
-      </div>
-
-      <div class="field">
-        <%= f.label :password %>
-        <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
-      </div>
-
-      <div class="field">
-        <%= f.label :password_confirmation %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
-      </div>
-
-      <div class="actions">
-        <%= f.submit "Register", class: "btn btn-lg btn-primary btn-block" %>
-      </div>
-
-    <% end %>
-    <%= render "devise/shared/links" %>
+     </div>
+    </div>
 </div>
