--- a/src/app/views/authors/show.html.erb
+++ b/src/app/views/authors/show.html.erb
@@ -1,7 +1,7 @@
 
   <section class="jumbotron text-center">
     <div class="container">
-      <h1 class="jumbotron-heading">
+      <h1 class="jumbotron-heading profile">
         Welcome, <%= @author.first_name %>!
       </h1>
       <p class="lead text-muted"> Take a moment to check out your library, add a book, <br/> or get a MLA snippet if you need to reference your work! </p>
