--- a/src/app/views/welcome/index.erb
+++ b/src/app/views/welcome/index.erb
@@ -1,3 +1,4 @@
+<div class="overlay">
 <div class="jumbotron welcome">
   <div class="greeting">
     <h1 class="jumbotron-heading"> Welcome to the Shelf </h1>
@@ -5,4 +6,5 @@
     <%= link_to 'Login', login_path, :class => "btn btn-primary btn-lg" %>
     <%= link_to 'Signup', register_path, :class => "btn btn-primary btn-lg" %>
   </div>
+</div>
 </div>
