--- a/src/app/assets/stylesheets/custom/custom.scss
+++ b/src/app/assets/stylesheets/custom/custom.scss
@@ -14,6 +14,7 @@
  .form-signin .checkbox {
    font-weight: 400;
  }
+
  .form-signin .form-control {
    position: relative;
    box-sizing: border-box;
@@ -21,14 +22,17 @@
    padding: 10px;
    font-size: 16px;
  }
+
  .form-signin .form-control:focus {
    z-index: 2;
  }
+
  .form-signin input[type="email"] {
    margin-bottom: -1px;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
+
  .form-signin input[type="password"] {
    margin-bottom: 10px;
    border-top-left-radius: 0;
@@ -45,16 +49,15 @@
 
  .profile {
    color: white;
-   text-shadow: 1px 1px 1px #000 solid;
+   text-shadow: 1px 1px 1px #000;
  }
 
  p.lead.text-muted {
    color: white!important;
-   text-shadow: 1px 1px 1px #000 solid;
+   text-shadow: 1px 1px 1px #000;
  }
 
  .jumbotron {
-
    padding-top: 3rem;
    padding-bottom: 3rem;
    margin-bottom: 0;
@@ -83,7 +86,6 @@
  .album > h1 {
    text-align: center;
  }
-
 
  .card {
    display: flex;
