--- a/src/app/assets/stylesheets/welcome.scss
+++ b/src/app/assets/stylesheets/welcome.scss
@@ -5,8 +5,6 @@
 
 /* STYLES FOR WELCOME */
 
-
-
 .jumbotron {
    height: 100vh;
  }
@@ -18,6 +16,15 @@
    display: flex;
    justify-content: center;
    align-items: center;
+ }
+
+ .welcome::after {
+   height: 100%;
+   width: 100%;
+   color: #000;
+   opacity: 0.5;
+   position: absolute;
+   z-index: -1;
  }
 
  .greeting  {
