--- a/src/app/assets/stylesheets/custom/custom.scss
+++ b/src/app/assets/stylesheets/custom/custom.scss
@@ -1,5 +1,9 @@
 /* STYLES FOR LOGIN & REGISTRATION */
 
+// * {
+//   z-index: 100;
+// }
+
 .container>h2 {
   text-align: center;
 }
@@ -43,25 +47,39 @@
 
  section.jumbotron {
    height: 300px;
+   width: 100%;
    background: url('../hand.jpg') no-repeat center center;
    background-size: cover;
+   position: relative;
+   padding-top: 3rem;
+   padding-bottom: 3rem;
+   margin-bottom: 0;
+     &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #000;
+      opacity: .6; 
+    }
  }
 
  .profile {
    color: white;
    text-shadow: 1px 1px 1px #000;
+   position: relative;
  }
 
  p.lead.text-muted {
    color: white!important;
    text-shadow: 1px 1px 1px #000;
+   position: relative;
  }
 
- .jumbotron {
-   padding-top: 3rem;
-   padding-bottom: 3rem;
-   margin-bottom: 0;
-   background-color: #fff;
+ .lead {
+   position: relative;
  }
 
  @media (min-width: 768px) {
