--- a/src/app/assets/stylesheets/welcome.scss
+++ b/src/app/assets/stylesheets/welcome.scss
@@ -16,22 +16,24 @@
    display: flex;
    justify-content: center;
    align-items: center;
- }
-
- .welcome::after {
-   height: 100%;
-   width: 100%;
-   color: #000;
-   opacity: 0.5;
-   position: absolute;
-   z-index: -1;
+   position: relative;
+   &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #000;
+      opacity: .6; 
+    }
  }
 
  .greeting  {
    color: white;
    text-align: center;
    text-shadow: 1px 1px 1px #000;
-   z-index: 100;
+   z-index: 10;
  }
 
  .overlay {
