--- a/src/app/views/authors/show.html.erb
+++ b/src/app/views/authors/show.html.erb
@@ -6,7 +6,7 @@
       </h1>
       <p class="lead text-muted"> Take a moment to check out your library, add a book, <br/> or get a MLA snippet if you need to reference your work! </p>
       <p>
-        <%= link_to 'Create A New Book', new_author_book_path(@author, @book), :class => "btn btn-primary my-2" %>
+        <%= link_to 'Create A New Book', new_author_book_path(@author, @book), :class => "btn btn-primary my-2 lead" %>
       </p>
     </div>
   </section>
